# leapfrogai-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  config-example.yaml  config.yaml  lfai-values.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: e2e.yaml  environment.yaml  lint.yaml  publish-zarf-package.yaml  pytest.yaml  release.yaml  scorecard.yaml  test-deploy.yaml  test.yaml
backends/lfai/: __init__.py  rag_utils.py  routes.py  types.py
backends/openai/: __init__.py  completion.py  grpc_client.py  helpers.py  models.py  openai.py  routes.py  types.py
backends/openai/utils/: helpers.py
chart/: Chart.yaml  values.yaml
chart/templates/: namespace.yaml  uds-package.yaml  vs.yaml
chart/templates/api/: deployment.yaml  service.yaml
leapfrogai_api/: main.py
leapfrogai_api/backends/openai/: grpc_client.py  helpers.py  routes.py  types.py
metallb/: gateway.yaml  service.yaml
src/: main.py
src/backends/openai/: grpc_client.py  helpers.py  routes.py
src/tests/: test_main.py
src/utils/: __init__.py
test/: test-config.yaml  test_complete.py  test_complete_stream.py  test_main.py  test_simple_stream.py  this_will_work.py
test/fixtures/: config.yaml
tests/: test_main.py
tests/fixtures/: test-config.yaml
tests/performance/: performance_tests.py
utils/: __init__.py  config.py  helper.py  logging.py  rag_utils.py  test_config.py  test_helper.py
vectordb/: vector_stores.py
