[project]
name = "leapfrogai-api"
version = "0.4.0"
dependencies = [
    "fastapi >= 0.103.1",
    "pydantic >= 2.3.0",
    "uvicorn >= 0.23.2",
    "pyyaml >= 6.0.1",
    "leapfrogai >= 0.3.3",
    "python-multipart >= 0.0.6",
    "toml >= 0.10.2",
    "watchfiles >= 0.21.0",
]
requires-python = "==3.11.6"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "httpx"]

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
exclude = ["chart"]
