[project]
name = "leapfrogai-api"
version = "0.4.4"
dependencies = [
    "fastapi >= 0.103.1",
    "pydantic >= 2.3.0",
    "uvicorn >= 0.23.2",
    "pyyaml >= 6.0.1",
    "leapfrogai >= 0.3.3",
    "python-multipart >= 0.0.6",
    "toml >= 0.10.2",
    "watchfiles >= 0.21.0",
    "bs4>=0.0.1",
    "chromadb>=0.4.22",
    "llama-index>=0.9.32",
    "weaviate-client>=3.26.1",
    "pypdf>=3.17.4",
    "setuptools>=68.2.2",
    "transformers>=4.37.0",
    "torch>=2.1.2",    
    "accelerate>=0.26.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "black", "isort", "httpx", "selenium"]

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
exclude = ["chart"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]