[project]
name = "leapfrogai-api"
version = "0.5.1"
dependencies = [
    "fastapi >= 0.109.1",
    "pydantic >= 2.3.0",
    "uvicorn >= 0.23.2",
    "pyyaml >= 6.0.1",
    "leapfrogai >= 0.3.3",
    "python-multipart >= 0.0.7",
    "toml >= 0.10.2",
    "watchfiles >= 0.21.0",
]
requires-python = "==3.11.6"

[project.optional-dependencies]
dev = [
    "pip-tools == 7.3.0",
    "pytest",
    "black",
    "isort",
    "httpx",
    "selenium",
    "ruff",
]

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
exclude = ["chart"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"
